--- a/server/extra/cmd/generator/tmpl/form.tmpl
+++ b/server/extra/cmd/generator/tmpl/form.tmpl
@@ -6,7 +6,7 @@ import (
 )
 
 const (
-    exampleFormID = "example_form"
+    exampleFormID = "{{ .BotName }}_example_form"
 )
 
 var formRules = []form.Rule{
