add generator action block

--- a/server/extra/cmd/generator/tmpl/main.tmpl
+++ b/server/extra/cmd/generator/tmpl/main.tmpl
@@ -66,6 +66,11 @@ func (b bot) Form(ctx types.Context, values map[string]interface{}) (types.MsgPa
     return bots.RunForm(formRules, ctx, values)
 }
 {{end}}
+{{if .HasAction}}
+func (b bot) Action(ctx types.Context, values map[string]interface{}) (types.MsgPayload, error) {
+    return bots.RunAction(actionRules, ctx, values)
+}
+{{end}}
 {{if .HasCron}}
 func (b bot) Cron(send func(rcptTo string, uid serverTypes.Uid, out types.MsgPayload)) error {
     return bots.RunCron(cronRules, Name, b.AuthLevel(), send)
