add session generator

--- a/server/extra/cmd/generator/tmpl/action.tmpl
+++ b/server/extra/cmd/generator/tmpl/action.tmpl
@@ -6,7 +6,7 @@ import (
 )
 
 const (
-    exampleActionID = "{{ .BotName }}_help_action"
+    exampleActionID = "{{ .BotName }}_example_action"
 )
 
 var actionRules = []action.Rule{
