--- a/server/extra/cmd/generator/tmpl/action_func.tmpl
+++ b/server/extra/cmd/generator/tmpl/action_func.tmpl
@@ -1,3 +1,3 @@
-func (b bot) Action(ctx types.Context, values map[string]interface{}) (types.MsgPayload, error) {
-    return bots.RunAction(actionRules, ctx, values)
+func (b bot) Action(ctx types.Context, option string) (types.MsgPayload, error) {
+    return bots.RunAction(actionRules, ctx, option)
 }
