--- a/server/extra/cmd/generator/tmpl/main.tmpl
+++ b/server/extra/cmd/generator/tmpl/main.tmpl
@@ -67,8 +67,8 @@ func (b bot) Form(ctx types.Context, values map[string]interface{}) (types.MsgPa
 }
 {{end}}
 {{if .HasAction}}
-func (b bot) Action(ctx types.Context, values map[string]interface{}) (types.MsgPayload, error) {
-    return bots.RunAction(actionRules, ctx, values)
+func (b bot) Action(ctx types.Context, option string) (types.MsgPayload, error) {
+    return bots.RunAction(actionRules, ctx, option)
 }
 {{end}}
 {{if .HasCron}}
