--- a/server/extra/cmd/generator/tmpl/group_func.tmpl
+++ b/server/extra/cmd/generator/tmpl/group_func.tmpl
@@ -1,3 +1,3 @@
-func (b bot) Group(_ types.Context, _ map[string]interface{}, _ interface{}) (types.MsgPayload, error) {
-    return nil, nil
+func (b bot) Group(ctx types.Context, head map[string]interface{}, content interface{}) (types.MsgPayload, error) {
+    return bots.RunGroup(eventRules, ctx, head, content)
 }
