--- a/server/extra/cmd/generator/tmpl/main.tmpl
+++ b/server/extra/cmd/generator/tmpl/main.tmpl
@@ -57,8 +57,8 @@ func (b bot) Input(_ types.Context, _ map[string]interface{}, _ interface{}) (ty
 }
 {{end}}
 {{if .HasGroup}}
-func (b bot) Group(_ types.Context, _ map[string]interface{}, _ interface{}) (types.MsgPayload, error) {
-    return nil, nil
+func (b bot) Group(ctx types.Context, head map[string]interface{}, content interface{}) (types.MsgPayload, error) {
+    return bots.RunGroup(eventRules, ctx, head, content)
 }
 {{end}}
 {{if .HasCommand}}
