--- a/server/extra/page/template/markdown.html
+++ b/server/extra/page/template/markdown.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Markdown Editor</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.15.12/dist/css/uikit.min.css" />
-    <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.15.12/dist/css/uikit.min.css"/>
+    <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css"/>
     <script src="https://uicdn.toast.com/editor/latest/toastui-editor-all.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.4.0/axios.min.js"></script>
 </head>
 <body>
 <div id="editor"></div>
@@ -13,6 +14,7 @@
     <button class="uk-button uk-button-primary" id="button">Create</button>
 </p>
 <script>
+    const uid = "{{ .uid }}";
     const Editor = toastui.Editor;
     const editor = new Editor({
         el: document.querySelector('#editor'),
@@ -23,7 +25,19 @@
     editor.getMarkdown();
 
     document.querySelector("#button").addEventListener("click", function () {
-        alert(editor.getMarkdown())
+        const markdown = editor.getMarkdown()
+        if (markdown.length <= 0) {
+            alert("place input markdown")
+            return
+        }
+        axios.post("/extra/editor/markdown", {
+            uid: uid,
+            markdown: markdown,
+        }).then(() => {
+            alert("created")
+        }).catch(() => {
+            alert("error")
+        })
     })
 </script>
 </body>
