--- a/server/extra/cmd/composer/action/generator/tmpl/form.tmpl
+++ b/server/extra/cmd/composer/action/generator/tmpl/form.tmpl
@@ -12,7 +12,7 @@ const (
 var formRules = []form.Rule{
     {
         Id: exampleFormID,
-        Handler: func(ctx types.Context, values map[string]interface{}) types.MsgPayload {
+        Handler: func(ctx types.Context, values types.KV) types.MsgPayload {
             return nil
         },
     },
