--- a/server/extra/cmd/composer/action/generator/tmpl/group.tmpl
+++ b/server/extra/cmd/composer/action/generator/tmpl/group.tmpl
@@ -8,13 +8,13 @@ import (
 var eventRules = []event.Rule{
     {
         Event: types.GroupEventJoin,
-            Handler: func(ctx types.Context, head map[string]interface{}, content interface{}) types.MsgPayload {
+            Handler: func(ctx types.Context, head types.KV, content interface{}) types.MsgPayload {
             return types.TextMsg{Text: "Welcome"}
         },
     },
     {
         Event: types.GroupEventReceive,
-            Handler: func(ctx types.Context, head map[string]interface{}, content interface{}) types.MsgPayload {
+            Handler: func(ctx types.Context, head types.KV, content interface{}) types.MsgPayload {
             return types.TextMsg{Text: "receive something"}
         },
     },
