--- a/server/extra/cmd/composer/action/generator/tmpl/group_func.tmpl
+++ b/server/extra/cmd/composer/action/generator/tmpl/group_func.tmpl
@@ -1,3 +1,3 @@
-func (b bot) Group(ctx types.Context, head map[string]interface{}, content interface{}) (types.MsgPayload, error) {
+func (b bot) Group(ctx types.Context, head types.KV, content interface{}) (types.MsgPayload, error) {
     return bots.RunGroup(eventRules, ctx, head, content)
 }
