--- a/server/extra/cmd/composer/action/generator/tmpl/input_func.tmpl
+++ b/server/extra/cmd/composer/action/generator/tmpl/input_func.tmpl
@@ -1,3 +1,3 @@
-func (b bot) Input(_ types.Context, _ map[string]interface{}, _ interface{}) (types.MsgPayload, error) {
+func (b bot) Input(_ types.Context, _ types.KV, _ interface{}) (types.MsgPayload, error) {
     return nil, nil
 }
