--- a/server/extra/cmd/composer/action/generator/tmpl/main.tmpl
+++ b/server/extra/cmd/composer/action/generator/tmpl/main.tmpl
@@ -39,7 +39,7 @@ func (bot) Init(jsonconf json.RawMessage) error {
     }
 
     if !config.Enabled {
-        logs.Info.Printf("bot %s disabled", Name)
+        flog.Info("bot %s disabled", Name)
         return nil
     }
 
